# snapcast-multiroom

./: .dockerignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.json  config.schema.json  docker.sh
src/: config.rs  main.rs  monitoring.rs
